--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "author": "Esen Gungor",
   "license": "ISC",
   "dependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "config": "^3.2.5",
@@ -54,11 +56,11 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "^2.0.2",
     "husky": "^2.3.0",
     "jest": "^24.6.0",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^8.1.7",
+    "nodemon": "^2.0.2",
     "prettier": "^1.17.1"
   }
 }
